--- a/Carrossel/hannah.html
+++ b/Carrossel/hannah.html
@@ -23,7 +23,7 @@
     }
 
     html {
-      font-size: 16px; /* Tamanho base de fonte para telas maiores */
+      font-size: 16px; /* Tamanho base em telas maiores */
     }
 
     body {
@@ -61,6 +61,14 @@
       position: relative;
     }
 
+    /* Botão (hamburger) que só aparece no mobile */
+    .menu-btn {
+      display: none; /* escondido no desktop */
+      font-size: 28px;
+      cursor: pointer;
+      margin-left: auto;
+    }
+
     header .logo img {
       height: 50px;
     }
@@ -80,6 +88,7 @@
       font-weight: 600;
       color: var(--primaria);
       transition: color 0.3s ease;
+      white-space: nowrap;
     }
 
     nav.menu ul li a:hover {
@@ -142,11 +151,12 @@
       font-weight: 700;
       color: var(--primaria);
       margin-bottom: 15px;
+      font-size: 2rem;
     }
 
     #hero .hero-text p {
       margin-bottom: 20px;
-      font-size: 18px;
+      font-size: 1.1rem;
     }
 
     #hero .hero-text button {
@@ -177,16 +187,21 @@
       color: var(--primaria);
       text-align: center;
       margin-bottom: 20px;
-      font-size: 28px;
+      font-size: 2rem;
     }
 
-    /* Por padrão, vamos retirar a justificação e deixar left ou auto:
-       se preferir, troque para justify em telas grandes */
+    /* Justificado no desktop, deixaremos left no mobile via media query */
     #sobre-nos p {
       max-width: 800px;
       margin: 0 auto 20px auto;
-      text-align: left;
       font-size: 1rem;
+    }
+
+    /* Aplica a justificação no desktop */
+    @media (min-width: 769px) {
+      #sobre-nos p {
+        text-align: justify;
+      }
     }
 
     #sobre-nos .mv-vals {
@@ -215,9 +230,7 @@
     }
 
     #sobre-nos .mv-vals .item p {
-      text-align: left;
       font-size: 0.95rem;
-      margin: 0 auto;
     }
 
     #sobre-nos blockquote {
@@ -251,7 +264,7 @@
       font-weight: 700;
       color: var(--primaria);
       margin-bottom: 30px;
-      font-size: 28px;
+      font-size: 2rem;
     }
 
     /* Contêiner externo para centralizar tudo */
@@ -310,7 +323,7 @@
       }
     }
 
-    /* Círculos menores, posicionados em torno do círculo pai */
+    /* Círculos menores */
     .min-circle {
       position: absolute;
       width: 80px;
@@ -323,7 +336,6 @@
       transition: transform 0.2s;
     }
 
-    /* Efeito de zoom ao passar o mouse (opcional) */
     .min-circle:hover {
       transform: scale(1.1);
     }
@@ -338,7 +350,7 @@
     .modal {
       display: none; /* oculto por padrão */
       position: fixed;
-      z-index: 999; /* fica acima de tudo */
+      z-index: 999; /* acima de tudo */
       left: 0;
       top: 0;
       width: 100%;
@@ -355,6 +367,9 @@
       width: 80%;
       max-width: 500px;
       position: relative;
+      /* Para não ficar cortado em telas pequenas */
+      max-height: 80vh; 
+      overflow-y: auto; 
     }
 
     .close-btn {
@@ -377,7 +392,7 @@
       font-weight: 700;
       color: var(--primaria);
       margin-bottom: 20px;
-      font-size: 28px;
+      font-size: 2rem;
     }
 
     #como-ajudar ul {
@@ -409,7 +424,7 @@
       color: var(--primaria);
       text-align: center;
       margin-bottom: 30px;
-      font-size: 28px;
+      font-size: 2rem;
     }
 
     #historias-impacto .historias {
@@ -448,7 +463,7 @@
 
     #historias-impacto .historias .card .content p {
       font-size: 0.95rem;
-      text-align: left;
+      text-align: justify;
     }
 
     /* SEÇÃO DEPOIMENTOS */
@@ -463,7 +478,7 @@
       color: var(--primaria);
       text-align: center;
       margin-bottom: 30px;
-      font-size: 28px;
+      font-size: 2rem;
     }
 
     #depoimentos .depoimentos-container {
@@ -495,13 +510,14 @@
       margin-bottom: 10px;
       color: #333;
       font-size: 0.95rem;
-      text-align: left;
+      text-align: justify;
     }
 
     #depoimentos .depoimento footer {
       font-size: 14px;
       color: #ffffff;
-      text-align: left;
+      text-align: right;
+      margin-top: 8px;
     }
 
     /* RODAPÉ */
@@ -529,28 +545,41 @@
     }
 
     /* 
-      RESPONSIVIDADE: 
-      Ajustes para telas abaixo de 768px e abaixo de 480px
+      RESPONSIVIDADE GERAL 
+      Ajustes para telas abaixo de 768px 
     */
     @media (max-width: 768px) {
       html {
-        font-size: 15px; /* Reduz um pouco o tamanho base em tablets */
+        font-size: 15px; /* Reduz um pouco a base */
       }
 
       header {
         flex-wrap: wrap;
-        text-align: center;
       }
 
+      /* Some no desktop, aparece no mobile */
+      .menu-btn {
+        display: block;
+        margin-left: 10px;
+      }
+
+      /* Ocultar menu principal até apertar o botão */
       nav.menu ul {
+        display: none; 
+        flex-direction: column;
         gap: 10px;
-        justify-content: center;
         margin-top: 10px;
+      }
+
+      /* Ajuste final no cta-header, para não quebrar layout */
+      .cta-header {
+        margin-left: 0;
       }
 
       #hero {
         padding: 20px;
       }
+
       #hero .banner-img,
       #hero .hero-text {
         max-width: 100%;
@@ -564,137 +593,123 @@
         font-size: 1rem;
       }
 
+      /* Removendo justificação para melhor leitura em telas menores */
       #sobre-nos p {
-        font-size: 0.95rem;
-      }
-      #sobre-nos .mv-vals {
-        flex-direction: column;
-        align-items: center;
-      }
-
-      #historias-impacto .historias {
-        flex-direction: column;
-        align-items: center;
-      }
-
-      #depoimentos .depoimentos-container {
-        flex-direction: column;
-        align-items: center;
-      }
-
-      /* Ajuste no container do carrossel para telas médias */
-      #circles-container {
-        width: 400px;
-        height: 400px;
-        margin: 0 auto 20px auto;
-      }
-      #main-circle-content {
-        width: 140px;
-        height: 140px;
-      }
-      .min-circle {
-        width: 50px;
-        height: 50px;
-      }
-    }
-
-    @media (max-width: 480px) {
-      html {
-        font-size: 14px; /* Redução maior em smartphones */
-      }
-
-      body {
-        line-height: 1.4; /* Linha menor para caber melhor na tela */
-      }
-
-      #hero {
-        padding: 20px;
-      }
-      #hero .hero-text h1 {
-        font-size: 1.2rem;
-      }
-      #hero .hero-text p {
-        font-size: 0.95rem;
+        text-align: left !important;
       }
 
       #sobre-nos {
         padding: 20px 10px;
       }
+
       #sobre-nos h2 {
-        font-size: 1.4rem;
-      }
-      #sobre-nos p {
-        font-size: 0.9rem;
+        font-size: 1.6rem;
       }
 
-      #sobre-nos .mv-vals .item p {
-        font-size: 0.85rem;
+      #sobre-nos .mv-vals {
+        flex-direction: column;
+        align-items: center;
       }
 
       #projetos {
         padding: 30px 20px;
       }
+
       #projetos h2 {
-        font-size: 1.4rem;
+        font-size: 1.6rem;
       }
 
+      /* Aumentando o diâmetro do contêiner no mobile para caber círculos maiores */
       #circles-container {
-        width: 300px;
-        height: 300px;
-      }
-      #main-circle-content {
-        width: 100px;
-        height: 100px;
-      }
-      .min-circle {
-        width: 40px;
-        height: 40px;
+        width: 350px;
+        height: 350px;
       }
 
-      .modal-content {
-        width: 90%;
-        margin: 30% auto; /* para dar espaço no topo */
-        padding: 15px;
+      /* Círculo central maior no mobile */
+      #main-circle-content {
+        width: 160px;
+        height: 160px;
       }
-      .close-btn {
-        font-size: 24px;
+
+      /* Círculos menores também maiores */
+      .min-circle {
+        width: 60px;
+        height: 60px;
       }
 
       #como-ajudar {
         padding: 20px 10px;
       }
       #como-ajudar h2 {
-        font-size: 1.4rem;
-      }
-      #como-ajudar ul {
-        font-size: 0.95rem;
+        font-size: 1.6rem;
       }
 
       #historias-impacto {
         padding: 20px 10px;
       }
       #historias-impacto h2 {
-        font-size: 1.4rem;
+        font-size: 1.6rem;
+      }
+      #historias-impacto .historias {
+        flex-direction: column;
+        align-items: center;
       }
       #historias-impacto .card {
         width: 280px;
-      }
-      #historias-impacto .card .content p {
-        font-size: 0.9rem;
       }
 
       #depoimentos {
         padding: 20px 10px;
       }
       #depoimentos h2 {
-        font-size: 1.4rem;
+        font-size: 1.6rem;
+      }
+      #depoimentos .depoimentos-container {
+        flex-direction: column;
+        align-items: center;
       }
 
       footer {
         padding: 20px 10px;
       }
-      footer p {
-        font-size: 0.85rem;
+    }
+
+    /*
+      RESPONSIVIDADE PARA TELAS BEM PEQUENAS (ABAIXO DE 480px)
+    */
+    @media (max-width: 480px) {
+      html {
+        font-size: 14px; 
+      }
+      body {
+        line-height: 1.4; 
+      }
+
+      #hero .hero-text h1 {
+        font-size: 1.3rem;
+      }
+
+      /* Mantemos o tamanho dos círculos */
+      #circles-container {
+        width: 320px;
+        height: 320px;
+      }
+      #main-circle-content {
+        width: 150px;
+        height: 150px;
+      }
+      .min-circle {
+        width: 55px;
+        height: 55px;
+      }
+
+      .modal-content {
+        width: 90%;
+        margin: 20% auto; 
+        padding: 15px;
+      }
+      .close-btn {
+        font-size: 24px;
       }
     }
   </style>
@@ -707,6 +722,9 @@
     <div class="logo">
       <img src="imagens/logo.png" alt="Logotipo Fundação Hannah" />
     </div>
+
+    <!-- Botão de menu (hamburger) que só aparece no mobile -->
+    <div class="menu-btn" onclick="toggleMenu()">☰</div>
 
     <!-- Menu discreto na direita -->
     <nav class="menu">
@@ -746,7 +764,9 @@
       Nossa história começou em meio ao deserto. Durante a batalha contra um câncer maligno que acometeu Carla, fomos
       confrontados com a realidade da brevidade da vida. Essa experiência nos fez refletir sobre o que realmente
       importa. Foi nesse momento de vulnerabilidade que recebemos não apenas o milagre da cura, mas também o chamado
-      missionário.<br><br>
+      missionário.
+    </p>
+    <p>
       Há mais de 7 anos, temos dedicado nossas vidas integralmente a Deus, atuando como missionários no sudoeste
       asiático. Já plantamos igrejas e Centros de Ensino na Tailândia e em Myanmar, e agora expandimos nosso trabalho
       para o Camboja. Carla, pedagoga especialista em educação, e Gustavo, professor e teólogo com mestrado em
@@ -963,9 +983,19 @@
     <p>Endereço: (Seu endereço completo) | E-mail: (Seu e-mail) | Telefone: (Seu telefone)</p>
   </footer>
 
-  <!-- SCRIPT DO CARROSSEL + MODAL -->
+  <!-- SCRIPT DO MENU, CARROSSEL E MODAL -->
   <script>
-    // Seleciona todos os mini-círculos
+    // Função para exibir/ocultar menu no mobile
+    function toggleMenu() {
+      const menuUl = document.querySelector('nav.menu ul');
+      if (menuUl.style.display === 'flex') {
+        menuUl.style.display = 'none';
+      } else {
+        menuUl.style.display = 'flex';
+      }
+    }
+
+    // Seleciona todos os mini-círculos do carrossel
     document.querySelectorAll('.min-circle').forEach(circle => {
       circle.addEventListener('click', function () {
         const mainCircle = document.getElementById('main-circle-content');
