--- a/Carrossel/hannah.html
+++ b/Carrossel/hannah.html
@@ -213,25 +213,30 @@
     }
 
     #sobre-nos .mv-vals .item {
-      flex: 1 1 200px;
-      max-width: 300px;
-      background-color: var(--fundo-claro);
-      border-radius: 6px;
-      padding: 10px;
-      text-align: center;
-    }
+  flex: 1 1 200px;
+  max-width: 300px;
+  background-color: var(--fundo-claro);
+  border-radius: 6px;
+  padding: 15px; /* Aumentei o padding interno */
+  text-align: center;
+  margin: 10px; /* Adicionei margem externa para separação */
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Adicionei uma leve sombra para destacar as caixas */
+}
 
-    #sobre-nos .mv-vals .item h3 {
-      font-family: 'Montserrat', sans-serif;
-      font-weight: 600;
-      color: var(--primaria);
-      margin-bottom: 10px;
-      font-size: 1.1rem;
-    }
+#sobre-nos .mv-vals .item h3 {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+  color: var(--primaria);
+  margin-bottom: 10px;
+  font-size: 1.1rem;
+}
 
-    #sobre-nos .mv-vals .item p {
-      font-size: 0.95rem;
-    }
+#sobre-nos .mv-vals .item p {
+  text-align: justify; /* Justifiquei o texto */
+  font-size: 0.95rem;
+  line-height: 1.5; /* Melhorei o espaçamento entre linhas */
+  margin: 0; /* Removi margem desnecessária */
+}
 
     #sobre-nos blockquote {
       max-width: 600px;
