--- a/Carrossel/hannah.html
+++ b/Carrossel/hannah.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
@@ -212,31 +212,31 @@
       margin-top: 20px;
     }
 
-  #sobre-nos .mv-vals .item {
-  flex: 1 1 200px;
-  max-width: 280px; /* Diminuí a largura máxima */
-  background-color: var(--fundo-claro);
-  border-radius: 6px;
-  padding: 15px; /* Espaçamento interno */
-  text-align: left; /* Alterei para alinhamento à esquerda */
-  margin: 15px; /* Maior espaçamento externo para melhor distribuição */
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Sombra suave */
-}
+    #sobre-nos .mv-vals .item {
+      flex: 1 1 200px;
+      max-width: 280px; /* Diminuí a largura máxima */
+      background-color: var(--fundo-claro);
+      border-radius: 6px;
+      padding: 15px; /* Espaçamento interno */
+      text-align: left; /* Alterei para alinhamento à esquerda */
+      margin: 15px; /* Maior espaçamento externo para melhor distribuição */
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Sombra suave */
+    }
 
-#sobre-nos .mv-vals .item h3 {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 600;
-  color: var(--primaria);
-  margin-bottom: 10px;
-  font-size: 1.2rem; /* Aumentei o tamanho da fonte do título */
-}
+    #sobre-nos .mv-vals .item h3 {
+      font-family: 'Montserrat', sans-serif;
+      font-weight: 600;
+      color: var(--primaria);
+      margin-bottom: 10px;
+      font-size: 1.2rem; /* Aumentei o tamanho da fonte do título */
+    }
 
-#sobre-nos .mv-vals .item p {
-  font-size: 1rem; /* Aumentei o tamanho da fonte */
-  line-height: 1.6; /* Maior espaçamento entre linhas */
-  margin: 0;
-  text-align: left; /* Alinhamento à esquerda para evitar grandes espaçamentos */
-}
+    #sobre-nos .mv-vals .item p {
+      font-size: 1rem; /* Aumentei o tamanho da fonte */
+      line-height: 1.6; /* Maior espaçamento entre linhas */
+      margin: 0;
+      text-align: left; /* Alinhamento à esquerda para evitar grandes espaçamentos */
+    }
 
     #sobre-nos blockquote {
       max-width: 600px;
@@ -383,6 +383,28 @@
       right: 10px;
       font-size: 28px;
       cursor: pointer;
+    }
+
+    /* LISTA DE PROJETOS (ABAIXO DO CARROSSEL) */
+    .project-list {
+      max-width: 600px;
+      margin: 0 auto 40px auto;
+    }
+    .project-list ul {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+    .project-list li {
+      background-color: #fff;
+      border: 1px solid var(--primaria);
+      border-radius: 6px;
+      padding: 10px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+    .project-list li:hover {
+      background-color: var(--fundo-claro);
     }
 
     /* SEÇÃO COMO AJUDAR */
@@ -642,6 +664,10 @@
         height: 60px;
       }
 
+      .project-list {
+        max-width: 300px;
+      }
+
       #como-ajudar {
         padding: 20px 10px;
       }
@@ -694,7 +720,6 @@
         font-size: 1.3rem;
       }
 
-      /* Mantemos o tamanho dos círculos */
       #circles-container {
         width: 320px;
         height: 320px;
@@ -891,6 +916,18 @@
         </div>
       </div>
     </div>
+
+    <!-- LISTA DE PROJETOS ABAIXO DO CARROSSEL -->
+    <div class="project-list">
+      <ul>
+        <li data-title="HIS (Learning Center)">HIS (Learning Center)</li>
+        <li data-title="Saúde">Saúde</li>
+        <li data-title="Alimentação">Alimentação</li>
+        <li data-title="Bolsas Escolares">Bolsas Escolares</li>
+        <li data-title="Casa de Refugiados">Casa de Refugiados</li>
+        <li data-title="Plantação de Igrejas">Plantação de Igrejas</li>
+      </ul>
+    </div>
   </section>
 
   <!-- MODAL PARA EXIBIR INFORMAÇÕES DOS PROJETOS -->
@@ -1037,6 +1074,22 @@
         document.getElementById('modal').style.display = 'block';
         document.getElementById('modal-title').textContent = clickedTitle;
         document.getElementById('modal-text').textContent = clickedText;
+      });
+    });
+
+    // Função para "clicar" no círculo de acordo com o título
+    function clickProjectCircleByTitle(title) {
+      const circle = document.querySelector(`.min-circle[data-title="${title}"]`);
+      if(circle) {
+        circle.click();
+      }
+    }
+
+    // Vinculando o clique na lista de projetos
+    document.querySelectorAll('.project-list li').forEach(item => {
+      item.addEventListener('click', () => {
+        const title = item.getAttribute('data-title');
+        clickProjectCircleByTitle(title);
       });
     });
 
