--- a/Carrossel/hannah.html
+++ b/Carrossel/hannah.html
@@ -425,7 +425,7 @@
     #como-ajudar ul {
       max-width: 600px;
       margin: 0 auto 20px auto;
-      text-align: left;
+      text-align: center;
       font-size: 1rem;
       line-height: 1.6;
     }
@@ -490,7 +490,7 @@
 
     #historias-impacto .historias .card .content p {
       font-size: 0.95rem;
-      text-align: justify;
+      text-align: center;
     }
 
     /* SEÇÃO DEPOIMENTOS */
@@ -537,13 +537,13 @@
       margin-bottom: 10px;
       color: #333;
       font-size: 0.95rem;
-      text-align: justify;
+      text-align: center;
     }
 
     #depoimentos .depoimento footer {
       font-size: 14px;
       color: #ffffff;
-      text-align: right;
+      text-align: center;
       margin-top: 8px;
     }
 
