--- a/LandPage/Kampot_English - Copy.html
+++ b/LandPage/Kampot_English - Copy.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en-US">
 <head>
   <meta charset="UTF-8" />
@@ -190,27 +190,6 @@
       color: #2F4F2F;
     }
 
-    /* ABOUT GUSTAVO SECTION */
-    .about-gustavo {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-      gap: 1rem;
-    }
-
-    .about-gustavo img {
-      width: 150px;
-      height: auto;
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-    }
-
-    .about-gustavo p {
-      max-width: 600px;
-      margin: 0 auto;
-    }
-
     /* FOOTER */
     footer {
       text-align: center;
@@ -343,7 +322,7 @@
       <p><em>“And He said to them, ‘Go into all the world and preach the Gospel to every creature.’” (Mark 16:15)</em></p>
     </section>
 
-    <!-- TESTIMONIES SECTION -->
+    <!-- TESTIMONIES SECTION (RENAMED AS REQUESTED) -->
     <section>
       <h3>Testemunhos</h3> 
       <div class="testemunho-container">
@@ -385,24 +364,6 @@
         <a class="cta-btn" href="https://hannahenglishcourse.vercel.app/" target="_blank">
           Explore the Course
         </a>
-      </div>
-    </section>
-
-    <!-- ABOUT GUSTAVO SECTION -->
-    <section>
-      <h3>About Gustavo Roquette: Creator of the Hannah English Course</h3>
-      <div class="about-gustavo">
-        <img src="./gustavo.jpg" alt="Gustavo Roquette" />
-        <p>
-          Gustavo Roquette is a Brazilian missionary with over 20 years of experience as an educator, school principal, and teacher trainer in the Brazilian Ministry of Education. 
-          He holds a Bachelor’s degree in Theology from the Cesar Dacorso Filho Methodist Seminary (Brazil), a Master’s in Intercultural Studies from the Malaysia Baptist Theological Seminary, 
-          and a Master’s in Education from the Federal University of Rio de Janeiro. 
-          <br><br>
-          For more than seven years, Gustavo has been serving in Thailand, where he founded the Hannah Foundation and has planted churches in Brazil, Thailand, and Myanmar. 
-          Together with his wife Carla, he co-directs the HIS Learning Center. 
-          Through the Hannah English Course, Gustavo integrates effective language instruction with faith-based values, 
-          providing transformative educational opportunities in Southeast Asia and beyond.
-        </p>
       </div>
     </section>
 
