--- a/LandPage/Kampot_English.html
+++ b/LandPage/Kampot_English.html
@@ -390,19 +390,16 @@
 
     <!-- ABOUT GUSTAVO SECTION -->
     <section>
-      <h3>About Gustavo Roquette: Creator of the Hannah English Course</h3>
+      <h3>Meet Gustavo Roquette</h3>
       <div class="about-gustavo">
         <img src="./gustavo.jpg" alt="Gustavo Roquette" />
         <p>
-          Gustavo Roquette is a Brazilian missionary with over 20 years of experience as an educator, school principal, and teacher trainer in the Brazilian Ministry of Education. 
-          He holds a Bachelor’s degree in Theology from the Cesar Dacorso Filho Methodist Seminary (Brazil), a Master’s in Intercultural Studies from the Malaysia Baptist Theological Seminary, 
-          and a Master’s in Education from the Federal University of Rio de Janeiro. 
+          Gustavo Roquette is a Brazilian missionary and the creator of the Hannah English Course, an innovative app that blends English learning with biblical teachings. This initiative highlights his dedication to using education as a tool to fulfill God's mission.
           <br><br>
-          For more than seven years, Gustavo has been serving in Thailand, where he founded the Hannah Foundation and has planted churches in Brazil, Thailand, and Myanmar. 
-          Together with his wife Carla, he co-directs the HIS Learning Center. 
-          Through the Hannah English Course, Gustavo integrates effective language instruction with faith-based values, 
-          providing transformative educational opportunities in Southeast Asia and beyond.
-        </p>
+          With over 20 years of experience in education and more than seven years in cross-cultural missions in Thailand, Gustavo holds degrees in Theology from the César Dacorso Filho Methodist Seminary (Brazil), Intercultural Studies from the Malaysia Baptist Theological Seminary, and Educational Technology from the Federal University of Rio de Janeiro. His expertise includes roles as an educator, school director, and teacher trainer for Brazil’s Ministry of Education, as well as planting churches in Brazil, Thailand, and Myanmar.
+          <br><br>         
+          In Thailand, Gustavo and his wife Carla founded the Hannah Foundation and lead the HIS Learning Center together. This center combines quality education with Christian values, making a positive impact on local communities.
+         </p>
       </div>
     </section>
 
