--- a/LandPage/Kampot_English - Copy (2).html
+++ b/LandPage/Kampot_English - Copy (2).html
@@ -190,43 +190,26 @@
       color: #2F4F2F;
     }
 
-    /* ABOUT GUSTAVO SECTION - ESTILIZAÇÃO DISCRETA */
-.about-gustavo-section {
-  background-color: rgba(255, 255, 255, 0.5); /* Fundo sutil */
-  padding: 1rem; /* Menor espaçamento interno */
-  margin: 1rem 0; /* Margem vertical */
-  border-radius: 6px; /* Bordas levemente arredondadas */
-  font-size: 0.9rem; /* Fonte menor para discrição */
-  color: #555; /* Cor de texto mais neutra */
-  text-align: center; /* Centraliza o conteúdo */
-}
+    /* ABOUT GUSTAVO SECTION */
+    .about-gustavo {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      gap: 1rem;
+    }
 
-.about-gustavo-section h3 {
-  font-size: 1.2rem; /* Título menor */
-  color: #333;       /* Cor menos chamativa */
-  margin-bottom: 0.5rem;
-}
+    .about-gustavo img {
+      width: 150px;
+      height: auto;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    }
 
-.about-gustavo-section .about-gustavo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 1rem;
-  text-align: center;
-}
-
-.about-gustavo-section .about-gustavo img {
-  width: 80px;  /* Imagem menor */
-  height: auto;
-  border-radius: 50%; /* Formato circular */
-  box-shadow: none;   /* Remove a sombra */
-}
-
-.about-gustavo-section .about-gustavo p {
-  max-width: 400px;   /* Limita a largura do texto */
-  margin: 0 auto;
-  line-height: 1.4;   /* Espaçamento de linha confortável */
-}
+    .about-gustavo p {
+      max-width: 600px;
+      margin: 0 auto;
+    }
 
     /* FOOTER */
     footer {
@@ -406,19 +389,19 @@
     </section>
 
     <!-- ABOUT GUSTAVO SECTION -->
-<section class="about-gustavo-section">
-  <h3>Meet Gustavo Roquette</h3>
-  <div class="about-gustavo">
-    <img src="./gustavo.jpg" alt="Gustavo Roquette" />
-    <p>
-      Gustavo Roquette is a Brazilian missionary and the creator of the Hannah English Course, an innovative app that blends English learning with biblical teachings. This initiative highlights his dedication to using education as a tool to fulfill God's mission.
-      <br><br>
-      With over 20 years of experience in education and more than seven years in cross-cultural missions in Thailand, Gustavo holds degrees in Theology from the César Dacorso Filho Methodist Seminary (Brazil), Intercultural Studies from the Malaysia Baptist Theological Seminary, and Educational Technology from the Federal University of Rio de Janeiro. His expertise includes roles as an educator, school director, and teacher trainer for Brazil’s Ministry of Education, as well as planting churches in Brazil, Thailand, and Myanmar.
-      <br><br>
-      In Thailand, Gustavo and his wife Carla founded the Hannah Foundation and lead the HIS Learning Center together. This center combines quality education with Christian values, making a positive impact on local communities.
-    </p>
-  </div>
-</section>
+    <section>
+      <h3>Meet Gustavo Roquette</h3>
+      <div class="about-gustavo">
+        <img src="./gustavo.jpg" alt="Gustavo Roquette" />
+        <p>
+          Gustavo Roquette is a Brazilian missionary and the creator of the Hannah English Course, an innovative app that blends English learning with biblical teachings. This initiative highlights his dedication to using education as a tool to fulfill God's mission.
+          <br><br>
+          With over 20 years of experience in education and more than seven years in cross-cultural missions in Thailand, Gustavo holds degrees in Theology from the César Dacorso Filho Methodist Seminary (Brazil), Intercultural Studies from the Malaysia Baptist Theological Seminary, and Educational Technology from the Federal University of Rio de Janeiro. His expertise includes roles as an educator, school director, and teacher trainer for Brazil’s Ministry of Education, as well as planting churches in Brazil, Thailand, and Myanmar.
+          <br><br>         
+          In Thailand, Gustavo and his wife Carla founded the Hannah Foundation and lead the HIS Learning Center together. This center combines quality education with Christian values, making a positive impact on local communities.
+         </p>
+      </div>
+    </section>
 
     <!-- FOOTER -->
     <footer>
