--- a/LandPage/Kampot_English.html
+++ b/LandPage/Kampot_English.html
@@ -289,9 +289,9 @@
         <a href="https://www.instagram.com/hannah_mission?igshid=ZHloNnpuYmEwaGdj&utm_source=qr" target="_blank">
           <img src="./logo-hannahfoundation.png" alt="Logo Hannah Foundation Thailand">
         </a>
-       <!--  <a href="https://nacaodacruz.com.br/" target="_blank">
-          <img src="./logo-nacaodacruz.png" alt="Logo Missão Nação da Cruz">
-        </a>-->
+       <a href="https://safeplace.com.br/" target="_blank">
+          <img src="./Safe.jpg" alt="Logo Safe Place">
+        </a>
       </div>
       <h1>Hannah Learning Center – Bringing English Education and the Gospel to Kampot</h1>
     </header>
@@ -429,9 +429,9 @@
         <a href="https://www.instagram.com/hannah_mission?igshid=ZHloNnpuYmEwaGdj&utm_source=qr" target="_blank">
           <img src="./logo-hannahfoundation.png" alt="Logo Hannah Foundation Thailand">
         </a>
-        <!-- <a href="https://nacaodacruz.com.br/" target="_blank">
-          <img src="./logo-nacaodacruz.png" alt="Logo Missão Nação da Cruz">
-        </a> -->
+        <a href="https://nacaodacruz.com.br/" target="_blank">
+          <img src="./Safe.jpg" alt="Logo Safe">
+        </a>
       </div>
       <div class="footer-copy">
         <p>© 2025 Hannah English Course. All rights reserved.</p>
