--- a/LandPage/Kampot_English.html
+++ b/LandPage/Kampot_English.html
@@ -345,7 +345,7 @@
     <!-- PILOT PLAN -->
     <section>
       <h3>Pilot Project – How We Begin</h3>
-      <p>Our plan is to start with two English classes, offering lessons twice a week. As the program takes root, we aim to increase the number of students and classes, and eventually introduce other courses as needed.</p>
+      <p>Our plan is to start with two English classes, offering lessons twice a week. As the program takes root, we aim to increase the number of students and classes, and eventually introduce other courses as needed. Once we form a group of students with basic English knowledge, our goal is to expand the project to establish a Christian school with a complete curriculum covering all subjects, with God's help.</p>
       <p>Besides teaching English, the course promotes Christian values and helps shape responsible citizens—connected to God’s Word and committed to society.</p>
     </section>
 
