--- a/LandPage/Kampot_English.html
+++ b/LandPage/Kampot_English.html
@@ -286,7 +286,7 @@
     <header>
       <div class="logo-area">
         <!-- Links to partner logos -->
-          <a href="https://www.instagram.com/hannah_mission?igsh=ZHloNnpuYmEwaGdj&utm_source=qr" target="_blank">
+          <a href="https://www.instagram.com/hannah_mission/profilecard/" target="_blank">
           <img src="./logo-hannahfoundation.png" alt="Logo Hannah Foundation Thailand">
         </a>
        <a href="https://safeplace.com.br/" target="_blank">
@@ -426,7 +426,7 @@
         <em>“Go into all the world and preach the gospel to every creature.” (Mark 16:15)</em>
       </p>
       <div class="footer-logos">
-        <a href="https://www.instagram.com/hannah_mission?igsh=ZHloNnpuYmEwaGdj&utm_source=qr" target="_blank">
+        <a href="https://www.instagram.com/hannah_mission/profilecard/?igsh=ZHloNnpuYmEwaGdj" target="_blank">
           <img src="./logo-hannahfoundation.png" alt="Logo Hannah Foundation Thailand">
         </a>
         <a href="https://nacaodacruz.com.br/" target="_blank">
