--- a/LandPage/Kampot_English.html
+++ b/LandPage/Kampot_English.html
@@ -289,7 +289,7 @@
           <a href="https://www.instagram.com/hannah_mission/profilecard/" target="_blank">
           <img src="./logo-hannahfoundation.png" alt="Logo Hannah Foundation Thailand">
         </a>
-       <a href="https://safeplace.com.br/" target="_blank">
+       <a href="http://safeplacemission.com/" target="_blank">
           <img src="./Safe.jpg" alt="Logo Safe Place">
         </a>
       </div>
@@ -362,7 +362,7 @@
 
     <!-- TESTIMONIES SECTION -->
     <section>
-      <h3>Testemunhos</h3> 
+      <h3>Testimonials</h3> 
       <div class="testemunho-container">
         <!-- Testimonial 1 -->
         <div class="testemunho">
@@ -429,7 +429,7 @@
         <a href="https://www.instagram.com/hannah_mission/profilecard/?igsh=ZHloNnpuYmEwaGdj" target="_blank">
           <img src="./logo-hannahfoundation.png" alt="Logo Hannah Foundation Thailand">
         </a>
-        <a href="https://nacaodacruz.com.br/" target="_blank">
+        <a href="http://safeplacemission.com" target="_blank">
           <img src="./Safe.jpg" alt="Logo Safe">
         </a>
       </div>
