--- a/Carrossel/hannah.html
+++ b/Carrossel/hannah.html
@@ -771,7 +771,7 @@
 
   <!-- VÍDEO DE FUNDO -->
   <video id="bg-video" autoplay muted loop playsinline>
-    <source src="video_danca.mp4" type="video/mp4" />
+    <source src="imagens/video_danca.mp4" type="video/mp4" />
     Seu navegador não suporta vídeos HTML5.
   </video>
 
