--- a/Carrossel/hannah.html
+++ b/Carrossel/hannah.html
@@ -869,7 +869,7 @@
       <div id="main-circle-content">
         <!-- Imagem inicial do centro -->
         <img
-          src="imagens/globo.png"
+          src="imagens/globo.gif"
           alt="Globo"
           data-title="Globo"
           data-text="Bem-vindo ao carrossel circular. Clique em um projeto para mais informações."
