--- a/Carrossel/hannah - Copy.html
+++ b/Carrossel/hannah - Copy.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
@@ -26,9 +26,13 @@
       font-size: 16px; /* Tamanho base em telas maiores */
     }
 
+    /* 
+      Removemos o background-color padrão do body para que o vídeo seja visível.
+      Caso queira manter outra cor, basta alterar ou remover o "!important".
+    */
     body {
       font-family: 'Open Sans', Arial, sans-serif;
-      background-color: #ffffff;
+      background-color: transparent !important;
       color: #000000;
       line-height: 1.6;
     }
@@ -116,14 +120,33 @@
       background-color: var(--secundaria);
     }
 
-    /* BANNER INICIAL */
+    /*
+      VÍDEO DE FUNDO:
+      Fica fixo enquanto a página rola, com z-index -1 para ficar "atrás" do conteúdo.
+    */
+    #bg-video {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      z-index: -1; 
+    }
+
+    /*
+      BANNER INICIAL (HERO):
+      Tornamos o background transparente para permitir que o vídeo apareça por trás.
+    */
     #hero {
       display: flex;
       flex-wrap: wrap;
       align-items: center;
       justify-content: center;
       padding: 40px 20px;
-      background-color: var(--fundo-claro);
+      background-color: transparent !important; /* Removido fundo sólido */
+      position: relative; /* Necessário para organizar camadas se for usar overlays */
+      z-index: 0;
     }
 
     #hero .banner-img {
@@ -228,14 +251,14 @@
       font-weight: 600;
       color: var(--primaria);
       margin-bottom: 10px;
-      font-size: 1.2rem; /* Aumentei o tamanho da fonte do título */
+      font-size: 1.2rem; /* Aumentei o tamanho do título */
     }
 
     #sobre-nos .mv-vals .item p {
       font-size: 1rem; /* Aumentei o tamanho da fonte */
       line-height: 1.6; /* Maior espaçamento entre linhas */
       margin: 0;
-      text-align: left; /* Alinhamento à esquerda para evitar grandes espaçamentos */
+      text-align: left; /* Alinhamento à esquerda */
     }
 
     #sobre-nos blockquote {
@@ -745,6 +768,12 @@
   </style>
 </head>
 <body>
+
+  <!-- VÍDEO DE FUNDO -->
+  <video id="bg-video" autoplay muted loop playsinline>
+    <source src="imagens/video_danca.mp4" type="video/mp4" />
+    Seu navegador não suporta vídeos HTML5.
+  </video>
 
   <!-- CABEÇALHO -->
   <header>
