--- a/Carrossel/hannah - Copy (2).html
+++ b/Carrossel/hannah - Copy (2).html
@@ -116,21 +116,12 @@
       background-color: var(--secundaria);
     }
 
-    /* Seletor de idioma estilizado */
-    #language-select {
+    /* Seletor de idioma */
+    .language-selector {
       margin-left: 15px;
       font-family: 'Montserrat', sans-serif;
       font-weight: 600;
       font-size: 14px;
-      background-color: var(--primaria);
-      color: var(--texto-claro);
-      border: none;
-      border-radius: 6px;
-      padding: 5px 10px;
-      cursor: pointer;
-    }
-    #language-select:focus {
-      outline: none;
     }
 
     /*
@@ -795,8 +786,8 @@
       <button id="nav-doar" onclick="alert('Página de Doação em desenvolvimento')">Doe Agora</button>
     </div>
 
-    <!-- Seletor de idioma estilizado -->
-    <select id="language-select" onchange="changeLanguage()">
+    <!-- Seletor de idioma -->
+    <select id="language-select" class="language-selector" onchange="changeLanguage()">
       <option value="pt">Português</option>
       <option value="en">English</option>
     </select>
@@ -882,109 +873,94 @@
 
       <!-- Círculo rotatório com mini-círculos -->
       <div id="circle">
-        <!-- 1: HIS Learning Center -->
+        <!-- 1: HIS (Learning Center) -->
         <div
           class="min-circle"
           style="top: 10%; left: 50%; transform: translate(-50%, 0);"
           data-img="imagens/img1.png"
-          data-title="HIS Learning Center"
-          data-title-pt="Centro de Aprendizado HIS"
-          data-title-en="HIS Learning Center"
+          data-title="HIS (Learning Center)"
+          data-title-pt="HIS (Learning Center)"
+          data-title-en="HIS (Learning Center)"
           data-text="Oferecemos ensino de idiomas e esportes para crianças de baixa renda, utilizando histórias bíblicas para transmitir valores."
           data-text-pt="Oferecemos ensino de idiomas e esportes para crianças de baixa renda, utilizando histórias bíblicas para transmitir valores."
           data-text-en="We provide language and sports education for low-income children, using Bible stories to teach values."
         >
-          <img src="imagens/img1.png" alt="HIS Learning Center" />
+          <img src="imagens/img1.png" alt="HIS (Learning Center)" />
         </div>
 
-        <!-- 2: Healing Hands -->
+        <!-- 2: Saúde -->
         <div
           class="min-circle"
           style="top: 30%; left: 85%; transform: translate(-50%, 0);"
           data-img="imagens/img3.png"
-          data-title="Healing Hands"
-          data-title-pt="Mãos que Curam"
-          data-title-en="Healing Hands"
+          data-title="Saúde"
+          data-title-pt="Saúde"
+          data-title-en="Health"
           data-text="Acompanhamos gestantes e bebês em vilas carentes, garantindo cuidados essenciais desde o pré-natal até os primeiros anos."
           data-text-pt="Acompanhamos gestantes e bebês em vilas carentes, garantindo cuidados essenciais desde o pré-natal até os primeiros anos."
           data-text-en="We monitor pregnant women and babies in vulnerable villages, ensuring essential care from prenatal to the early years."
         >
-          <img src="imagens/img3.png" alt="Healing Hands" />
+          <img src="imagens/img3.png" alt="Saúde" />
         </div>
 
-        <!-- 3: Blessing Table -->
+        <!-- 3: Alimentação -->
         <div
           class="min-circle"
           style="top: 70%; left: 85%; transform: translate(-50%, 0);"
           data-img="imagens/img2.png"
-          data-title="Blessing Table"
-          data-title-pt="Mesa de Bênçãos"
-          data-title-en="Blessing Table"
+          data-title="Alimentação"
+          data-title-pt="Alimentação"
+          data-title-en="Nutrition"
           data-text="Fornecemos lanches durante a semana para os alunos e refeições completas aos sábados, atendendo necessidades físicas e emocionais."
           data-text-pt="Fornecemos lanches durante a semana para os alunos e refeições completas aos sábados, atendendo necessidades físicas e emocionais."
           data-text-en="We provide snacks during the week for students and full meals on Saturdays, meeting physical and emotional needs."
         >
-          <img src="imagens/img2.png" alt="Blessing Table" />
+          <img src="imagens/img2.png" alt="Alimentação" />
         </div>
 
-        <!-- 4: Seeds of Wisdom -->
+        <!-- 4: Bolsas Escolares -->
         <div
           class="min-circle"
           style="top: 90%; left: 50%; transform: translate(-50%, 0);"
           data-img="imagens/img6.png"
-          data-title="Seeds of Wisdom"
-          data-title-pt="Sementes de Sabedoria"
-          data-title-en="Seeds of Wisdom"
-          data-text="Garantimos a matrícula e bolsas escolares para crianças refugiadas, possibilitando acesso à educação formal."
-          data-text-pt="Garantimos a matrícula e bolsas escolares para crianças refugiadas, possibilitando acesso à educação formal."
-          data-text-en="We provide enrollment and scholarships for refugee children, giving them access to formal education."
+          data-title="Bolsas Escolares"
+          data-title-pt="Bolsas Escolares"
+          data-title-en="School Scholarships"
+          data-text="Garantimos a matrícula e bolsas escolares para crianças refugiadas de Myanmar, possibilitando acesso à educação formal."
+          data-text-pt="Garantimos a matrícula e bolsas escolares para crianças refugiadas de Myanmar, possibilitando acesso à educação formal."
+          data-text-en="We provide enrollment and scholarships for refugee children from Myanmar, giving them access to formal education."
         >
-          <img src="imagens/img6.png" alt="Seeds of Wisdom" />
+          <img src="imagens/img6.png" alt="Bolsas Escolares" />
         </div>
 
-        <!-- 5: Shiloh’s Home -->
+        <!-- 5: Casa de Refugiados -->
         <div
           class="min-circle"
           style="top: 70%; left: 15%; transform: translate(-50%, 0);"
           data-img="imagens/img5.png"
-          data-title="Shiloh’s Home"
-          data-title-pt="Lar de Siló"
-          data-title-en="Shiloh’s Home"
+          data-title="Casa de Refugiados"
+          data-title-pt="Casa de Refugiados"
+          data-title-en="Refugee Shelter"
           data-text="Acolhemos mulheres e crianças refugiadas da guerra, oferecendo abrigo, cuidado e esperança em meio à dor."
           data-text-pt="Acolhemos mulheres e crianças refugiadas da guerra, oferecendo abrigo, cuidado e esperança em meio à dor."
           data-text-en="We shelter women and children who are war refugees, offering them care, shelter, and hope in the midst of pain."
         >
-          <img src="imagens/img5.png" alt="Shiloh’s Home" />
+          <img src="imagens/img5.png" alt="Casa de Refugiados" />
         </div>
 
-        <!-- 6: Hannah’s Church Planting -->
+        <!-- 6: Plantação de Igrejas -->
         <div
           class="min-circle"
           style="top: 30%; left: 15%; transform: translate(-50%, 0);"
           data-img="imagens/img4.png"
-          data-title="Hannah’s Church Planting"
-          data-title-pt="Plantação de Igrejas de Hannah"
-          data-title-en="Hannah’s Church Planting"
+          data-title="Plantação de Igrejas"
+          data-title-pt="Plantação de Igrejas"
+          data-title-en="Church Planting"
           data-text="Por meio do discipulado e formação de líderes, as sementes plantadas geram novas igrejas, fortalecendo comunidades cristãs."
           data-text-pt="Por meio do discipulado e formação de líderes, as sementes plantadas geram novas igrejas, fortalecendo comunidades cristãs."
           data-text-en="Through discipleship and leadership training, these seeds lead to new churches, strengthening Christian communities."
         >
-          <img src="imagens/img4.png" alt="Hannah’s Church Planting" />
-        </div>
-
-        <!-- 7: Harvesting Faith -->
-        <div
-          class="min-circle"
-          style="top: 50%; left: 97%; transform: translate(-50%, -50%);"
-          data-img="imagens/img7.png"
-          data-title="Harvesting Faith"
-          data-title-pt="Colhendo Fé"
-          data-title-en="Harvesting Faith"
-          data-text="Ensina e desenvolve projetos de agricultura e criação de animais, fortalecendo comunidades, combatendo a fome e gerando renda."
-          data-text-pt="Ensina e desenvolve projetos de agricultura e criação de animais, fortalecendo comunidades, combatendo a fome e gerando renda."
-          data-text-en="It teaches and develops agricultural and livestock projects, strengthening communities, fighting hunger, and generating income."
-        >
-          <img src="imagens/img7.png" alt="Harvesting Faith" />
+          <img src="imagens/img4.png" alt="Plantação de Igrejas" />
         </div>
       </div>
     </div>
@@ -992,13 +968,12 @@
     <!-- LISTA DE PROJETOS ABAIXO DO CARROSSEL -->
     <div class="project-list">
       <ul>
-        <li id="li-projeto1" data-title="HIS Learning Center" data-title-pt="Centro de Aprendizado HIS" data-title-en="HIS Learning Center">Centro de Aprendizado HIS</li>
-        <li id="li-projeto2" data-title="Healing Hands" data-title-pt="Mãos que Curam" data-title-en="Healing Hands">Mãos que Curam</li>
-        <li id="li-projeto3" data-title="Blessing Table" data-title-pt="Mesa de Bênçãos" data-title-en="Blessing Table">Mesa de Bênçãos</li>
-        <li id="li-projeto4" data-title="Seeds of Wisdom" data-title-pt="Sementes de Sabedoria" data-title-en="Seeds of Wisdom">Sementes de Sabedoria</li>
-        <li id="li-projeto5" data-title="Shiloh’s Home" data-title-pt="Lar de Siló" data-title-en="Shiloh’s Home">Lar de Siló</li>
-        <li id="li-projeto6" data-title="Hannah’s Church Planting" data-title-pt="Plantação de Igrejas de Hannah" data-title-en="Hannah’s Church Planting">Plantação de Igrejas de Hannah</li>
-        <li id="li-projeto7" data-title="Harvesting Faith" data-title-pt="Colhendo Fé" data-title-en="Harvesting Faith">Colhendo Fé</li>
+        <li id="li-projeto1" data-title="HIS (Learning Center)" data-title-pt="HIS (Learning Center)" data-title-en="HIS (Learning Center)">HIS (Learning Center)</li>
+        <li id="li-projeto2" data-title="Saúde" data-title-pt="Saúde" data-title-en="Health">Saúde</li>
+        <li id="li-projeto3" data-title="Alimentação" data-title-pt="Alimentação" data-title-en="Nutrition">Alimentação</li>
+        <li id="li-projeto4" data-title="Bolsas Escolares" data-title-pt="Bolsas Escolares" data-title-en="School Scholarships">Bolsas Escolares</li>
+        <li id="li-projeto5" data-title="Casa de Refugiados" data-title-pt="Casa de Refugiados" data-title-en="Refugee Shelter">Casa de Refugiados</li>
+        <li id="li-projeto6" data-title="Plantação de Igrejas" data-title-pt="Plantação de Igrejas" data-title-en="Church Planting">Plantação de Igrejas</li>
       </ul>
     </div>
   </section>
@@ -1298,32 +1273,28 @@
       },
       // Lista de projetos
       "li-projeto1": {
-        pt: "Centro de Aprendizado HIS",
-        en: "HIS Learning Center"
+        pt: "HIS (Learning Center)",
+        en: "HIS (Learning Center)"
       },
       "li-projeto2": {
-        pt: "Mãos que Curam",
-        en: "Healing Hands"
+        pt: "Saúde",
+        en: "Health"
       },
       "li-projeto3": {
-        pt: "Mesa de Bênçãos",
-        en: "Blessing Table"
+        pt: "Alimentação",
+        en: "Nutrition"
       },
       "li-projeto4": {
-        pt: "Sementes de Sabedoria",
-        en: "Seeds of Wisdom"
+        pt: "Bolsas Escolares",
+        en: "School Scholarships"
       },
       "li-projeto5": {
-        pt: "Lar de Siló",
-        en: "Shiloh’s Home"
+        pt: "Casa de Refugiados",
+        en: "Refugee Shelter"
       },
       "li-projeto6": {
-        pt: "Plantação de Igrejas de Hannah",
-        en: "Hannah’s Church Planting"
-      },
-      "li-projeto7": {
-        pt: "Colhendo Fé",
-        en: "Harvesting Faith"
+        pt: "Plantação de Igrejas",
+        en: "Church Planting"
       },
 
       /* COMO AJUDAR */
