--- a/Carrossel/hannah.html
+++ b/Carrossel/hannah.html
@@ -339,6 +339,7 @@
       object-fit: cover;
     }
 
+    /* Círculo pai que contém os minicírculos e faz rotação */
     #circle {
       position: absolute;
       top: 50%;
@@ -359,6 +360,7 @@
       }
     }
 
+    /* Minicírculos (sem top/left fixos agora) */
     .min-circle {
       position: absolute;
       width: 80px;
@@ -880,12 +882,11 @@
         />
       </div>
 
-      <!-- Círculo rotatório com mini-círculos -->
+      <!-- Círculo rotatório que contém os minicírculos -->
       <div id="circle">
         <!-- 1: HIS Learning Center -->
         <div
           class="min-circle"
-          style="top: 10%; left: 50%; transform: translate(-50%, 0);"
           data-img="imagens/img1.png"
           data-title="HIS Learning Center"
           data-title-pt="Centro de Aprendizado HIS"
@@ -900,7 +901,6 @@
         <!-- 2: Healing Hands -->
         <div
           class="min-circle"
-          style="top: 30%; left: 85%; transform: translate(-50%, 0);"
           data-img="imagens/img3.png"
           data-title="Healing Hands"
           data-title-pt="Mãos que Curam"
@@ -915,7 +915,6 @@
         <!-- 3: Blessing Table -->
         <div
           class="min-circle"
-          style="top: 70%; left: 85%; transform: translate(-50%, 0);"
           data-img="imagens/img2.png"
           data-title="Blessing Table"
           data-title-pt="Mesa de Bênçãos"
@@ -930,7 +929,6 @@
         <!-- 4: Seeds of Wisdom -->
         <div
           class="min-circle"
-          style="top: 90%; left: 50%; transform: translate(-50%, 0);"
           data-img="imagens/img6.png"
           data-title="Seeds of Wisdom"
           data-title-pt="Sementes de Sabedoria"
@@ -945,7 +943,6 @@
         <!-- 5: Shiloh’s Home -->
         <div
           class="min-circle"
-          style="top: 70%; left: 15%; transform: translate(-50%, 0);"
           data-img="imagens/img5.png"
           data-title="Shiloh’s Home"
           data-title-pt="Lar de Siló"
@@ -960,7 +957,6 @@
         <!-- 6: Hannah’s Church Planting -->
         <div
           class="min-circle"
-          style="top: 30%; left: 15%; transform: translate(-50%, 0);"
           data-img="imagens/img4.png"
           data-title="Hannah’s Church Planting"
           data-title-pt="Plantação de Igrejas de Hannah"
@@ -975,7 +971,6 @@
         <!-- 7: Harvesting Faith -->
         <div
           class="min-circle"
-          style="top: 50%; left: 97%; transform: translate(-50%, -50%);"
           data-img="imagens/img7.png"
           data-title="Harvesting Faith"
           data-title-pt="Colhendo Fé"
@@ -992,13 +987,27 @@
     <!-- LISTA DE PROJETOS ABAIXO DO CARROSSEL -->
     <div class="project-list">
       <ul>
-        <li id="li-projeto1" data-title="HIS Learning Center" data-title-pt="Centro de Aprendizado HIS" data-title-en="HIS Learning Center">Centro de Aprendizado HIS</li>
-        <li id="li-projeto2" data-title="Healing Hands" data-title-pt="Mãos que Curam" data-title-en="Healing Hands">Mãos que Curam</li>
-        <li id="li-projeto3" data-title="Blessing Table" data-title-pt="Mesa de Bênçãos" data-title-en="Blessing Table">Mesa de Bênçãos</li>
-        <li id="li-projeto4" data-title="Seeds of Wisdom" data-title-pt="Sementes de Sabedoria" data-title-en="Seeds of Wisdom">Sementes de Sabedoria</li>
-        <li id="li-projeto5" data-title="Shiloh’s Home" data-title-pt="Lar de Siló" data-title-en="Shiloh’s Home">Lar de Siló</li>
-        <li id="li-projeto6" data-title="Hannah’s Church Planting" data-title-pt="Plantação de Igrejas de Hannah" data-title-en="Hannah’s Church Planting">Plantação de Igrejas de Hannah</li>
-        <li id="li-projeto7" data-title="Harvesting Faith" data-title-pt="Colhendo Fé" data-title-en="Harvesting Faith">Colhendo Fé</li>
+        <li id="li-projeto1" data-title="HIS Learning Center" data-title-pt="Centro de Aprendizado HIS" data-title-en="HIS Learning Center">
+          Centro de Aprendizado HIS
+        </li>
+        <li id="li-projeto2" data-title="Healing Hands" data-title-pt="Mãos que Curam" data-title-en="Healing Hands">
+          Mãos que Curam
+        </li>
+        <li id="li-projeto3" data-title="Blessing Table" data-title-pt="Mesa de Bênçãos" data-title-en="Blessing Table">
+          Mesa de Bênçãos
+        </li>
+        <li id="li-projeto4" data-title="Seeds of Wisdom" data-title-pt="Sementes de Sabedoria" data-title-en="Seeds of Wisdom">
+          Sementes de Sabedoria
+        </li>
+        <li id="li-projeto5" data-title="Shiloh’s Home" data-title-pt="Lar de Siló" data-title-en="Shiloh’s Home">
+          Lar de Siló
+        </li>
+        <li id="li-projeto6" data-title="Hannah’s Church Planting" data-title-pt="Plantação de Igrejas de Hannah" data-title-en="Hannah’s Church Planting">
+          Plantação de Igrejas de Hannah
+        </li>
+        <li id="li-projeto7" data-title="Harvesting Faith" data-title-pt="Colhendo Fé" data-title-en="Harvesting Faith">
+          Colhendo Fé
+        </li>
       </ul>
     </div>
   </section>
@@ -1195,10 +1204,43 @@
       circleElement.style.animationPlayState = 'running';
     });
 
+    /**************************************************
+     * FUNÇÃO PARA POSICIONAR AUTOMATICAMENTE OS MINI *
+     **************************************************/
+    function positionMinCircles() {
+      const circle = document.getElementById('circle');
+      const minCircles = circle.querySelectorAll('.min-circle');
+      const total = minCircles.length;
+
+      // Ajuste esse valor para alterar o quão distante do centro ficam os minicírculos
+      const radiusPercent = 35;
+
+      // Ângulo igualmente dividido (360° / total)
+      const angleStep = 360 / total;
+
+      minCircles.forEach((minCircle, index) => {
+        const angle = angleStep * index; // em graus
+        const rad = angle * (Math.PI / 180); // converte para radianos
+
+        // Posição usando 50% como centro, mais cos/sin multiplicado por radiusPercent
+        const x = 50 + radiusPercent * Math.cos(rad);
+        const y = 50 + radiusPercent * Math.sin(rad);
+
+        // Aplica estilos
+        minCircle.style.left = x + '%';
+        minCircle.style.top = y + '%';
+        // Centraliza o próprio minCircle
+        minCircle.style.transform = 'translate(-50%, -50%)';
+      });
+    }
+
+    // Chama a função ao carregar e quando a tela for redimensionada
+    window.addEventListener('DOMContentLoaded', positionMinCircles);
+    window.addEventListener('resize', positionMinCircles);
+
     /*****************************************
      * TRADUÇÕES (PT <-> EN) via dicionário  *
      *****************************************/
-    // Objeto com todas as traduções. Cada chave corresponde ao "id" no HTML.
     const translations = {
       "page-title": {
         pt: "Fundação Hannah",
